[package]
name = "rla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["parking_lot", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
argh = "0.1"
tempfile = "3"
once_cell = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
